<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/control_parent_menus">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:orientation="vertical">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:orientation="vertical"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:gravity="center"
                android:text="@string/please_input_ip"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="18sp">
            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="220dp"
                        android:layout_height="32dp"
                        android:text="@string/base_url_ip"
                        android:textColor="@color/black"
                        android:gravity="center|right"
                        android:textSize="25sp">
                    </TextView>

                    <EditText
                        android:id="@+id/base_url"
                        android:layout_width="380dp"
                        android:layout_height="40dp"
                        android:paddingStart="10dp"
                        android:textColor="@color/gray999"
                        android:textSize="23sp"
                        android:hint="请输入地址"
                        android:inputType="textEmailAddress"
                        android:background="@drawable/control_parent_white_floor"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="220dp"
                    android:layout_height="32dp"
                    android:textColor="@color/black"
                    android:gravity="right"
                    android:textSize="15sp">
                </TextView>
                <TextView
                    android:layout_width="10dp"
                    android:layout_height="32dp"
                    android:text="*"
                    android:textColor="@color/red_color"
                    android:textSize="15sp">
                </TextView>
                <TextView
                    android:layout_width="370dp"
                    android:layout_height="32dp"
                    android:textColor="@color/gray999"
                    android:text="访问物联网后台地址，如：http://192.168.1.1.147:18089"
                    android:gravity="left"
                    android:textSize="15sp">
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="220dp"
                        android:layout_height="32dp"
                        android:text="@string/sip_url_ip"
                        android:textColor="@color/black"
                        android:gravity="center|right"
                        android:textSize="25sp">
                    </TextView>

                    <EditText
                        android:id="@+id/sip_url"
                        android:layout_width="380dp"
                        android:layout_height="40dp"
                        android:paddingStart="10dp"
                        android:textColor="@color/gray999"
                        android:textSize="23sp"
                        android:hint="请输入地址"
                        android:inputType="textEmailAddress"
                        android:background="@drawable/control_parent_white_floor"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="220dp"
                    android:layout_height="32dp"
                    android:textColor="@color/black"
                    android:gravity="right"
                    android:textSize="15sp">
                </TextView>
                <TextView
                    android:layout_width="10dp"
                    android:layout_height="32dp"
                    android:text="*"
                    android:textColor="@color/red_color"
                    android:textSize="15sp">
                </TextView>
                <TextView
                    android:layout_width="370dp"
                    android:layout_height="32dp"
                    android:textColor="@color/gray999"
                    android:text="视频通话后台服务地址，如192.168.1.14:5060"
                    android:gravity="left"
                    android:textSize="15sp">
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="220dp"
                        android:layout_height="32dp"
                        android:text="@string/socket_url_ip"
                        android:textColor="@color/black"
                        android:gravity="center|right"
                        android:textSize="25sp">
                    </TextView>

                    <EditText
                        android:id="@+id/socket_url"
                        android:layout_width="380dp"
                        android:layout_height="40dp"
                        android:paddingStart="10dp"
                        android:textColor="@color/gray999"
                        android:textSize="23sp"
                        android:hint="请输入地址"
                        android:inputType="textEmailAddress"
                        android:background="@drawable/control_parent_white_floor"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="220dp"
                    android:layout_height="32dp"
                    android:textColor="@color/black"
                    android:gravity="right"
                    android:textSize="15sp">
                </TextView>
                <TextView
                    android:layout_width="10dp"
                    android:layout_height="32dp"
                    android:text="*"
                    android:textColor="@color/red_color"
                    android:textSize="15sp">
                </TextView>
                <TextView
                    android:layout_width="370dp"
                    android:layout_height="32dp"
                    android:textColor="@color/gray999"
                    android:text="socket通讯服务地址，如：ws://192.168.1.147:18089"
                    android:gravity="left"
                    android:textSize="15sp">
                </TextView>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:orientation="horizontal"
        android:gravity="center">
    </LinearLayout>

</LinearLayout>
